freedreno: firefox crashes on video playback
System information
- OS: Arch
- GPU: a690
- Kernel version: v6.4-rc3
- Mesa version: 23.1.1
- Xserver version: 1.21.1.8
- Desktop manager and compositor: dwm
Describe the issue
Firefox (113.0.1) crashes consistently when opening https://hlsjs.video-dev.org/demo/ with the following error:
MESA: error: fd_bo_dmabuf:534: failed to get dmabuf fd: -1
Rob Clark suggested adding an assert that always triggers when this happens:
+ if (suballoc_bo(bo)) {
+ ERROR_MSG("attempt to export non sharable buffer");
+ }
Disabling suballocations by making sure use_heap is always false in fd_device_new() makes the problem go away.
Edited by Johan Hovold